--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,12 @@
     "@types/node": "^14.14.30",
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.1.5"
   }
 }
