--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,16 @@
   "author": "evanjin",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "antd": "^4.12.3",
     "next": "^10.0.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.2.0",
     "@types/node": "^14.14.30",
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
