--- a/front/package.json
+++ b/front/package.json
@@ -17,8 +17,11 @@
     "@emotion/styled": "^11.1.5",
     "antd": "^4.12.3",
     "next": "^10.0.7",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.2.0",
