--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^14.14.30",
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
+    "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
