--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^4.1.5"
   }
 }
