--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -12,8 +12,8 @@
     "es6": true
   },
   "extends": [
-    "esline:recommand",
-    "plugin:react/recommand",
+    "eslint:recommended",
+    "plugin:react/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
@@ -22,6 +22,7 @@
     "react-hooks"
   ],
   "rules": {
-
+    "semi": ["error", "always"],
+    "quotes": ["error", "single"]
   }
 }
