--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
+    "react-slick": "^0.28.0",
     "redux": "^4.0.5"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.16",
+    "@types/react-slick": "^0.23.4",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
