--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
     "react-slick": "^0.28.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.2.0",
