--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "antd": "^4.12.3",
+    "axios": "^0.21.1",
     "next": "^10.0.7",
     "next-redux-wrapper": "^6.0.2",
     "react": "^16.14.0",
