--- a/front/package.json
+++ b/front/package.json
@@ -37,7 +37,9 @@
     "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^7.20.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "redux-devtools-extension": "^2.13.8",
