--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.1.5",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
+    "faker": "^5.4.0",
+    "nanoid": "^3.1.20",
     "next": "^10.0.7",
     "next-redux-wrapper": "^6.0.2",
     "react": "^16.14.0",
