--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "faker": "^5.4.0",
+    "immer": "^8.0.1",
     "nanoid": "^3.1.20",
     "next": "^10.0.7",
     "next-redux-wrapper": "^6.0.2",
@@ -29,6 +30,7 @@
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
     "@emotion/babel-plugin": "^11.2.0",
     "@types/node": "^14.14.30",
     "@types/react": "16.9.16",
@@ -38,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
+    "dayjs": "^1.10.4",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.1",
