--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@emotion/babel-plugin": "^11.2.0",
+    "@types/faker": "^5.1.7",
     "@types/node": "^14.14.30",
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
@@ -40,7 +41,6 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-import": "^1.13.3",
-    "dayjs": "^1.10.4",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.1",
