--- a/back/package.json
+++ b/back/package.json
@@ -13,11 +13,18 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
+    "@types/validator": "^13.1.3",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.5.0",
+    "sequelize-cli": "^6.2.0",
+    "sequelize-typescript": "^2.1.0"
   }
 }
