--- a/back/package.json
+++ b/back/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "react-ts-nodebird-back",
+  "name": "react-nodebird-server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "npm run build:live",
-    "build": "tsc -p .",
-    "build:live": "nodemon --watch '**/*.ts' --exec 'ts-node' app.ts"
+    "dev": "nodemon"
   },
-  "author": "Evanjin",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.31",
-    "@types/validator": "^13.1.3",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
-  },
+  "author": "ZeroCho",
+  "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "helmet": "^3.23.3",
+    "hpp": "^0.2.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "reflect-metadata": "^0.1.13",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.5.0",
-    "sequelize-cli": "^6.2.0",
-    "sequelize-typescript": "^2.1.0"
+    "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "nodemon": "^2.0.4"
   }
 }
