--- a/front/package.json
+++ b/front/package.json
@@ -15,8 +15,10 @@
     "@ant-design/icons": "^4.5.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@next/bundle-analyzer": "^10.0.9",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "faker": "^5.4.0",
     "immer": "^8.0.1",
     "nanoid": "^3.1.20",
@@ -27,7 +29,8 @@
     "react-redux": "^7.2.2",
     "react-slick": "^0.28.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "swr": "^0.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
