--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next -p 3060",
-    "build": "next build",
+    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
     "start": "next start",
     "type-check": "tsc"
   },
@@ -18,6 +18,7 @@
     "@next/bundle-analyzer": "^10.0.9",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.10.4",
     "faker": "^5.4.0",
     "immer": "^8.0.1",
