--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next -p 3060",
     "build": "cross-env ANALYZE=true NODE_ENV=production next build",
-    "start": "next start",
+    "start": "cross-env NODE_ENV=production next start -p 3060",
     "type-check": "tsc"
   },
   "author": "evanjin",
