--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "author": "ZeroCho",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.868.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
@@ -21,6 +22,7 @@
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
